# libsocket

./: README.md  jni_wegrame.iodraw  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/libsocket/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LwsService.cpp
app/src/main/cpp/include/libwebsocket/: libwebsockets.h  lws_config.h
app/src/main/java/com/example/libsocket/: ApplicationLoader.java  LwsService.java  MainActivity.java  ThreadService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/libsocket/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
